# desiblind

./: .gitignore  README.md  Readme.md  pyproject.toml
desiblind/: __init__.py  blinding.py  catalog.py  catalog_bao.py  catalog_fnl.py  catalog_rsd.py  data_vector_parameters.py  tracers.py  utils.py
nb/: blinding_example.ipynb  blinding_example_new.ipynb  catalog_bao_blinding_example.ipynb  catalog_blinding_examples.ipynb
old/: inference_abacus.py  test_blinding.py
scripts/: blinding.py  blinding_example.py  blindingv2.py  catalog_blinding.py  create_catalog_w0wa_blinding_bank.py  data_vector_blinding.py  fs_likelihood.py
scripts/validation/: README.md  catalog_bao_validation.ipynb  catalog_fnl_validation.ipynb  catalog_rsd_validation.ipynb  submit_catalog_bao_lss_split_gc_validation.sh  validate_catalog_bao_desi_clustering_stats.py  validate_catalog_bao_lss_mkclusdat.py  validate_catalog_bao_lss_mkclusran.py  validate_catalog_bao_lss_multi_randoms.py  validate_catalog_bao_lss_nz_weight.py  validate_catalog_bao_lss_redshift_shift.py  validate_catalog_bao_lss_saved_catalog.py  validate_catalog_bao_lss_split_gc.py  validate_catalog_fnl_lss_core.py  validate_catalog_rsd_desi_clustering_driver.py  validate_catalog_rsd_desi_clustering_stats.py  validate_catalog_rsd_lss_reconstruction_shift.py  validate_catalog_rsd_lss_redshift_shift.py  validate_catalog_rsd_lss_saved_catalog.py
tests/: test_catalog.py  test_catalog_fnl.py  test_catalog_rsd.py  test_imports.py
